# synergyML

./: .env.example  CONTRIBUTING.md  Complete2_README.md  Complete_README.md  README.md  WHY_US.md  create_multimodal_dataset.py  pyproject.toml  requirements-audio.txt  requirements-dev.txt  requirements-video.txt  requirements.txt  setup_config.py  test2_multimodal.py  test_multimodal.py
docs/: pipeline_visualization.md
example/: multimodal_demo.py  testing_synergyml_gpt.py
example/multimodal/: README.md
examples_audioAnalysis/: README_audio.md  audio_analysis_examples.py  emotion_analysis_examples.py  music_analysis_examples.py  real_world_examples.py  speech_analysis_examples.py
examples_llm_enhanced_analysis/: llm_enhanced_analysis_examples.py
examples_pipeline_visualization/: pipeline_visualization_examples.py  pipeline_visualization_use_cases.py
examples_videoAnalysis/: README_video.md  utils.py  video_analysis_examples.py  visualizations.py
synergyml/: __init__.py  classification.py  config.py  text2text.py  vectorization.py
synergyml-env/: pyvenv.cfg
synergyml/experimental/: label_issues_batched.py
synergyml/internal/: multilabel_scorer.py  segmentation_utils.py
synergyml/llm/gpt/: completion.py  embedding.py  mixin.py
synergyml/llm/gpt/clients/llama_cpp/: completion.py  handler.py
synergyml/llm/gpt/clients/openai/: completion.py  credentials.py  embedding.py
synergyml/llm/vertex/: completion.py  mixin.py
synergyml/memory/: __init__.py  _annoy.py  _sklearn_nn.py
synergyml/model_management/: model_manager.py
synergyml/model_management/config/: model_registry_config.yaml
synergyml/models/_base/: classifier.py  tagger.py  text2text.py  vectorizer.py  vision.py
synergyml/models/gpt/: vectorization.py
synergyml/models/gpt/classification/: few_shot.py  tunable.py  zero_shot.py
synergyml/models/gpt/tagging/: ner.py
synergyml/models/gpt/text2text/: summarization.py  translation.py  tunable.py
synergyml/models/vertex/classification/: tunable.py  zero_shot.py
synergyml/models/vertex/text2text/: tunable.py
synergyml/multimodal/: __init__.py  video.py  vision.py
synergyml/multimodal/audio/: analyzer.py
synergyml/multimodal/av_analysis/: README.md  audio.py  audio_features.py  config.py  interfaces.py  scene_detection.py  sync.py  utils.py  video.py  visualizations.py
synergyml/multimodal/av_analysis/tests/: test_audio.py
synergyml/multimodal/emotion/: analyzer.py  utils.py  visualization.py
synergyml/multimodal/fusion/: analyzer.py  causality.py  visualizations.py  wavelet_analysis.py
synergyml/multimodal/llm_integration/: adapters.py  analyzer.py  interfaces.py  memory_manager.py  pipeline_optimizer.py  pipeline_visualization.py  visualization.py
synergyml/multimodal/text/: analyzer.py
synergyml/prompts/: builders.py  vision_templates.py
synergyml/segmentation/: filter.py  rank.py  summary.py
synergyml/utils/: vision.py
test_dataset/multimodal/data/: multimodal_dataset.json
tests/: test_utils.py
tests/llm/gpt/: test_gpt_mixins.py
tests/llm/vertex/: test_vertex_mixins.py
typings/PIL/: __init__.pyi
